--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,6 @@
 .caixa-principal{
     height: 100vh;
     width: 100%;
-    background-image: url(./img/banner.jpg);
     background-color: #191919;
     background-position: center;
     background-size: cover;
@@ -41,7 +40,169 @@ li{
     cursor: pointer;
 }
 
+.link-menu{
+    text-decoration: none;
+    color: white;
+}
+
 li:hover{
     color: #f9004d;
     transition: 0.5s;
+}
+
+.container{
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 70px 0;
+}
+
+.chamada-info{
+    width: 710px;
+    min-width: 500px;
+    margin-left: 40px;
+}
+
+.chamada-info h3{
+    color: white;
+    font-size: 25px;
+}
+
+.chamada-info h1{
+    color: white;
+    font-size: 55px;
+}
+
+.chamada-info h1 span {
+    color: #f9004d;
+}
+
+
+.chamada-logo{
+    max-width: 500px;
+    min-width: 400px;
+
+}
+.chamada-logo img{
+    width: 100%;
+}
+
+
+#sobre{
+    display: flex;
+    align-items: center;
+    padding: 60px 15%;
+    background-color: #000;
+}
+
+#sobre img{
+    height: 400px;
+    border-radius: 100%;
+    margin-right: 30px;
+    border: 2px solid #f9004d;
+}
+
+#sobre div h2{
+    color: white;
+    font-size: 75px;
+}
+
+#sobre div p {
+    color: #e2b9c6;
+    font-size: 25px;
+    margin-top: 30px;
+}
+
+#sobre div button{
+    color: white;
+    background: #f9004d;
+    height: 50px;
+    width: 180px;
+    font-size: 18px;
+    border: none;
+    border-radius: 26px;
+    margin-top: 60px;
+}
+#sobre div button:hover{
+    background-color: #bb194c81;
+    border: 5px solid #f9004d;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+#projetos{
+    background-color: #191919;
+    display: flex;
+    flex-direction: column;
+    padding-top: 50px;
+    padding-bottom: 100px;
+
+}
+
+#projetos h2{
+    color: white;
+    font-size: 75px;
+    text-align: center;
+}
+
+.projetos-cards{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
+}
+
+
+.card{
+    background-color: #000;
+    height: 365;
+    width: 325px;
+    border-radius: 20px;
+    padding: 20px 35px;
+    text-align: center;
+}
+
+.card img{
+    height: 100px;
+}
+
+.card h5{
+    color: white;
+    font-size: 24px;
+}
+
+.card p {
+    color: #e2b9c6;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+.card a{
+    background-color: #f9004d;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 25px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.card a:hover{
+    background-color: transparent;
+    border: 2px solid #f9004d;
+    transition: 0.5s;
+}
+
+footer{
+    background-color: #000;
+    padding-top: 25px;
+    padding-bottom: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+footer h5 {
+    color: white;
+    font-size: 15px;
 }
