--- a/src/style.css
+++ b/src/style.css
@@ -2,13 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Onest', sans-serif;
 }
 
 .caixa-principal{
     height: 100vh;
     width: 100%;
-    background-color: #191919;
+    background: linear-gradient(to right,#0F2027, #203A43, #2C5364);
     background-position: center;
     background-size: cover;
 }
@@ -45,11 +45,117 @@ li{
     color: white;
 }
 
-li:hover{
+.link-menu:hover{
     color: #f9004d;
     transition: 0.5s;
 }
-
+.tooltip-container {
+    position: relative;
+    cursor: pointer;
+    transition: all 0.2s;
+    font-size: 17px;
+    border-radius: 10px;
+  }
+  
+  .tooltip {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s;
+    border-radius: 15px;
+    box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2),
+      inset -5px -5px 15px rgba(255, 255, 255, 0.1),
+      5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
+  }
+  
+  .profile {
+    background: #2a2b2f;
+    border-radius: 10px 15px;
+    padding: 10px;
+    border: 1px solid rgba(11, 63, 95, 1);
+  }
+  
+  .social-card {
+    height: fit-content;
+    width: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    background: rgb(255, 255, 255);
+    padding: 20px 25px;
+    border-radius: 14px;
+  }
+  .Btn {
+    width: 45px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    background-color: transparent;
+    position: relative;
+    border-radius: 7px;
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+  
+  .svgContainer {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    backdrop-filter: blur(0px);
+    letter-spacing: 0.8px;
+    border-radius: 10px;
+    transition: all 0.3s;
+    border: 1px solid rgba(156, 156, 156, 0.466);
+    z-index: 2;
+  }
+  
+  .BG {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #181818;
+    z-index: 1;
+    border-radius: 10px;
+    pointer-events: none;
+    transition: all 0.3s;
+    font-size: 0px;
+  }
+  .github .BG {
+    background: #181818;
+  }
+  .linkdin .BG {
+    background: #0077b5;
+  }
+  .whatsapp .BG {
+    background: #075e54;
+  }
+  .discord .BG {
+    background: #7289da;
+  }
+  .Btn:hover .BG {
+    transform: scale(1.5);
+    /* transform-origin: bottom; */
+    font-size: 20px;
+    color: white;
+  }
+  
+  .Btn:hover .svgContainer {
+    border: 1px solid rgba(216, 216, 216, 0.466);
+    background-color: rgba(209, 209, 209, 0.466);
+    backdrop-filter: blur(4px);
+  }
+  
+  
 .container{
     width: 80%;
     margin: 0 auto;
@@ -63,11 +169,20 @@ li:hover{
     width: 710px;
     min-width: 500px;
     margin-left: 40px;
+    margin-bottom: 50px;
 }
 
-.chamada-info h3{
-    color: white;
-    font-size: 25px;
+.ola{
+  color: #2C5364;
+  font-size: 0.4em;
+  font-family: 'Onest', sans-serif;
+  
+}
+
+.dev{
+  font-size: 1em;
+  font-family: 'Onest', sans-serif;
+  
 }
 
 .chamada-info h1{
@@ -75,15 +190,12 @@ li:hover{
     font-size: 55px;
 }
 
-.chamada-info h1 span {
-    color: #f9004d;
-}
+
 
 
 .chamada-logo{
-    max-width: 700px;
+    max-width: 650px;
     min-width: 400px;
-    background-color: yellow;
 
 
 }
@@ -128,7 +240,7 @@ li:hover{
     margin-top: 60px;
 }
 #sobre div button:hover{
-    background-color: #bb194c81;
+    background-color: #0F2027;
     border: 5px solid #f9004d;
     transition: 0.5s;
     cursor: pointer;
@@ -197,8 +309,8 @@ li:hover{
 
 footer{
     background-color: #000;
-    padding-top: 25px;
-    padding-bottom: 30px;
+    padding-top: 100px;
+    padding-bottom: 120px;
     display: flex;
     align-items: center;
     justify-content: center;
