--- a/src/style.css
+++ b/src/style.css
@@ -43,118 +43,15 @@ li{
 .link-menu{
     text-decoration: none;
     color: white;
+
+    ;
 }
 
 .link-menu:hover{
     color: #f9004d;
     transition: 0.5s;
 }
-.tooltip-container {
-    position: relative;
-    cursor: pointer;
-    transition: all 0.2s;
-    font-size: 17px;
-    border-radius: 10px;
-  }
-  
-  .tooltip {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 10px;
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.3s;
-    border-radius: 15px;
-    box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2),
-      inset -5px -5px 15px rgba(255, 255, 255, 0.1),
-      5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
-  }
-  
-  .profile {
-    background: #2a2b2f;
-    border-radius: 10px 15px;
-    padding: 10px;
-    border: 1px solid rgba(11, 63, 95, 1);
-  }
-  
-  .social-card {
-    height: fit-content;
-    width: fit-content;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    background: rgb(255, 255, 255);
-    padding: 20px 25px;
-    border-radius: 14px;
-  }
-  .Btn {
-    width: 45px;
-    height: 45px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    background-color: transparent;
-    position: relative;
-    border-radius: 7px;
-    cursor: pointer;
-    transition: all 0.3s;
-  }
-  
-  .svgContainer {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: transparent;
-    backdrop-filter: blur(0px);
-    letter-spacing: 0.8px;
-    border-radius: 10px;
-    transition: all 0.3s;
-    border: 1px solid rgba(156, 156, 156, 0.466);
-    z-index: 2;
-  }
-  
-  .BG {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #181818;
-    z-index: 1;
-    border-radius: 10px;
-    pointer-events: none;
-    transition: all 0.3s;
-    font-size: 0px;
-  }
-  .github .BG {
-    background: #181818;
-  }
-  .linkdin .BG {
-    background: #0077b5;
-  }
-  .whatsapp .BG {
-    background: #075e54;
-  }
-  .discord .BG {
-    background: #7289da;
-  }
-  .Btn:hover .BG {
-    transform: scale(1.5);
-    /* transform-origin: bottom; */
-    font-size: 20px;
-    color: white;
-  }
-  
-  .Btn:hover .svgContainer {
-    border: 1px solid rgba(216, 216, 216, 0.466);
-    background-color: rgba(209, 209, 209, 0.466);
-    backdrop-filter: blur(4px);
-  }
-  
+
   
 .container{
     width: 80%;
@@ -175,14 +72,73 @@ li{
 .ola{
   color: #2C5364;
   font-size: 0.4em;
-  font-family: 'Onest', sans-serif;
+  font-family: 'Titillium Web', sans-serif;
   
 }
 
 .dev{
   font-size: 1em;
-  font-family: 'Onest', sans-serif;
+  font-family: 'Titillium Web', sans-serif;;
   
+}
+
+.links{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.button {
+  display: flex;
+  background-color: rgb(24, 23, 23);
+  color: #ffffff;
+  padding: 0.5rem 1.4rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 700;
+  text-align: center;
+  vertical-align: middle;
+  align-items: center;
+  border-radius: 0.5rem;
+  gap: 0.75rem;
+  border: none;
+  cursor: pointer;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  transition: .6s ease;
+}
+
+.button svg {
+  height: 30px;
+}
+
+.button:hover {
+  box-shadow: none;
+}
+
+.button {
+  display: flex;
+  background-color: rgb(24, 23, 23);
+  color: #ffffff;
+  padding: 0.5rem 1.4rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 700;
+  text-align: center;
+  vertical-align: middle;
+  align-items: center;
+  border-radius: 0.5rem;
+  gap: 0.75rem;
+  border: none;
+  cursor: pointer;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  transition: .6s ease;
+}
+
+.button svg {
+  height: 30px;
+}
+
+.button:hover {
+  box-shadow: none;
 }
 
 .chamada-info h1{
@@ -309,11 +265,76 @@ li{
 
 footer{
     background-color: #000;
-    padding-top: 100px;
-    padding-bottom: 120px;
+    padding-top: 25px;
+    padding-bottom: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.cssbuttons-io-button {
+  background: #a370f0;
+  color: white;
+  font-family: inherit;
+  padding: 0.35em;
+  padding-left: 1.2em;
+  font-size: 17px;
+  font-weight: 500;
+  border-radius: 0.9em;
+  border: none;
+  letter-spacing: 0.05em;
+  display: flex;
+  align-items: center;
+  box-shadow: inset 0 0 1.6em -0.6em #714da6;
+  overflow: hidden;
+  position: relative;
+  height: 2.8em;
+  padding-right: 3.3em;
+  cursor: pointer;
+}
+
+.cssbuttons-io-button .icon {
+  background: white;
+  margin-left: 1em;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 2.2em;
+  width: 2.2em;
+  border-radius: 0.7em;
+  box-shadow: 0.1em 0.1em 0.6em 0.2em #7b52b9;
+  right: 0.3em;
+  transition: all 0.3s;
+}
+
+.cssbuttons-io-button:hover .icon {
+  width: calc(100% - 0.6em);
+}
+
+.cssbuttons-io-button .icon svg {
+  width: 1.1em;
+  transition: transform 0.3s;
+  color: #7b52b9;
+}
+
+.cssbuttons-io-button:hover .icon svg {
+  transform: translateX(0.1em);
+}
+
+.cssbuttons-io-button:active .icon {
+  transform: scale(0.95);
+}
+
+.telefone{
+  display: block;
+  text-align: center;
+}
+
+.telefone p{
+  color: white;
+  padding: 10px;
+
 }
 
 footer h5 {
