--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,10 @@
     font-family: 'Onest', sans-serif;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 .caixa-principal{
     height: 100vh;
     width: 100%;
@@ -14,12 +18,16 @@
 }
 
 nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 8vh;
+  background: linear-gradient(to right,#0F2027, #203A43, #2C5364);
+}
+
+.mobile-menu{
+  cursor: pointer;
+  display: none;
 }
 
 nav a{
@@ -31,35 +39,42 @@ nav a:hover{
   overflow: 0.7;
 }
 
+.mobile-menu div{
+  width: 32px;
+  height: 2px;
+  background: #fff;
+  margin: 8px;
+  transition: 0.3s;
+
+}
 
 .portfolio{
     color: #ffffff;
-    font-size: 35px;
+    font-size: 24px;
+    letter-spacing: 4px;
 }
 
 .portfolio span{
     color: #f9004d;
 }
 
-li{
-    color: white;
-    display: inline-block;
-    font-size: 25px;
-    font-size: 25px;
-    margin-right: 30px;
-    cursor: pointer;
+.nav-list{
+  list-style: none;
+  display: flex;
+}
+
+.nav-list li{
+  letter-spacing: 3px;
+  margin-left: 32px;
 }
 
 .link-menu{
-    text-decoration: none;
-    color: white;
-
-    ;
+  color: white;
 }
 
 .link-menu:hover{
-    color: #f9004d;
-    transition: 0.5s;
+  color: #f9004d;
+  transition: 0.5s;
 }
 
   
@@ -70,13 +85,15 @@ li{
     align-items: center;
     justify-content: space-between;
     padding: 70px 0;
+    background-size: cover;
+    height: 92vh;
 }
 
 .chamada-info{
     width: 710px;
-    min-width: 500px;
     margin-left: 40px;
     margin-bottom: 50px;
+    margin-right: 30px;
 }
 
 .ola{
@@ -153,10 +170,8 @@ li{
 
 .chamada-info h1{
     color: white;
-    font-size: 55px;
+    font-size: 3em;
 }
-
-
 
 
 .chamada-logo{
@@ -351,3 +366,89 @@ footer h5 {
     color: white;
     font-size: 15px;
 }
+
+@media (max-width: 1024px) {
+  body {
+    overflow-x: hidden;
+  }
+  .nav-list {
+    position: absolute;
+    top: 8vh;
+    right: 0;
+    width: 50vw;
+    height: 92vh;
+    background: #23232e;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in;
+  }
+  .nav-list li {
+    margin-left: 0;
+    opacity: 0;
+  }
+  .mobile-menu {
+    display: block;
+  }
+
+  .container{
+    justify-content: center;
+    padding: 0;
+  }
+
+  .chamada-info{
+   width: 70vw;
+   margin: 0;
+   text-align: center;
+  }
+
+  .chamada-info h1{
+    font-size: 2em;
+  }
+
+  .chamada-logo{
+    display: none;
+  }
+
+  .foto-perfil{
+    display: none;
+  }
+
+  .projetos-cards{
+    display: grid;
+    place-items: center;
+  }
+
+  .card{
+    margin: 20px;
+  }
+
+}
+
+.nav-list.active{
+    transform: translateX(0);
+  }
+
+  @keyframes navLinkFade {
+    from{
+      opacity: 0;
+      transform: translateX(50px);
+    }
+    to{
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+
+  .mobile-menu.active .line1{
+    transform: rotate(-45deg) translate(-8px, 8px);
+  }
+
+  .mobile-menu.active .line2{
+    opacity: 0;
+  }
+
+  .mobile-menu.active .line3{
+    transform: rotate(45deg) translate(-5px, -7px);
+  }
