--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@ html{
     background: linear-gradient(to right,#0F2027, #203A43, #2C5364);
     background-position: center;
     background-size: cover;
+    overflow: hidden;
 }
 
 nav{
