--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,10 @@ html{
   scroll-behavior: smooth;
 }
 
+a{
+  text-decoration: none;
+}
+
 .caixa-principal{
     height: 100vh;
     width: 100%;
@@ -88,13 +92,14 @@ nav a:hover{
     padding: 70px 0;
     background-size: cover;
     height: 92vh;
+    overflow: hidden;
 }
 
 .chamada-info{
-    width: 710px;
-    margin-left: 40px;
-    margin-bottom: 50px;
-    margin-right: 30px;
+  width: 710px;
+  margin-left: 40px;
+  margin-bottom: 50px;
+  margin-right: 30px;
 }
 
 .ola{
@@ -170,14 +175,15 @@ nav a:hover{
 }
 
 .chamada-info h1{
-    color: white;
-    font-size: 3em;
+  color: white;
+  font-size: 3em;
 }
 
 
 .chamada-logo{
-    max-width: 650px;
-    min-width: 400px;
+  overflow: hidden;
+  max-width: 650px;
+  min-width: 400px;
 
 
 }
