--- a/src/style.css
+++ b/src/style.css
@@ -98,8 +98,9 @@ nav a:hover{
 .chamada-info{
   width: 710px;
   margin-left: 40px;
-  margin-bottom: 50px;
+  margin-bottom: 60px;
   margin-right: 30px;
+  
 }
 
 .ola{
@@ -118,6 +119,7 @@ nav a:hover{
 .links{
   display: flex;
   justify-content: space-evenly;
+  margin-top: 30px;
 }
 
 .button {
