--- a/src/style.css
+++ b/src/style.css
@@ -66,6 +66,7 @@ nav a:hover{
 .nav-list{
   list-style: none;
   display: flex;
+  https://portfolio-kei-virid.vercel.app
 }
 
 .nav-list li{
@@ -92,7 +93,6 @@ nav a:hover{
     padding: 70px 0;
     background-size: cover;
     height: 92vh;
-    overflow: hidden;
 }
 
 .chamada-info{
@@ -183,7 +183,6 @@ nav a:hover{
 
 
 .chamada-logo{
-  overflow: hidden;
   max-width: 650px;
   min-width: 400px;
 
@@ -404,6 +403,7 @@ footer h5 {
   .container{
     justify-content: center;
     padding: 0;
+    width: 80vw;
   }
 
   .chamada-info{
