--- a/src/style.css
+++ b/src/style.css
@@ -392,6 +392,11 @@ footer h5 {
     transform: translateX(100%);
     transition: transform 0.3s ease-in;
   }
+ 
+  .nav-list ul {
+    overflow: hidden;
+  }
+
   .nav-list li {
     margin-left: 0;
     opacity: 0;
