--- a/src/style.css
+++ b/src/style.css
@@ -439,3 +439,8 @@ footer h5 {
   .mobile-menu.active .line3{
     transform: rotate(45deg) translate(-5px, -7px);
   }
+
+  .navbar-scroll {
+    background-color: #555;
+    transition: background-color 0.3s ease;
+}
