--- a/src/style.css
+++ b/src/style.css
@@ -105,13 +105,13 @@ nav a:hover{
 
 .ola{
   color: #2C5364;
-  font-size: 0.4em;
+  font-size: 50%;
   font-family: 'Titillium Web', sans-serif;
   
 }
 
 .dev{
-  font-size: 1em;
+  font-size: 90%;
   font-family: 'Titillium Web', sans-serif;;
   
 }
@@ -348,7 +348,7 @@ footer h5 {
     font-size: 15px;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 769px) {
   body {
     overflow-x: hidden;
   }
@@ -357,7 +357,7 @@ footer h5 {
     top: 8vh;
     right: 0;
     width: 50vw;
-    height: 80vh;
+    height: 84vh;
     background: #23232e;
     flex-direction: column;
     align-items: center;
